--- a/index.html
+++ b/index.html
@@ -1,25 +1,26 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Tableros GSP</title>
   <style>
     html, body {
       margin: 0;
+      padding: 0;
       height: 100%;
       background-color: black;
     }
+
     iframe {
       border: none;
       width: 100%;
-      height: 100vh;
+      height: 100%;
     }
   </style>
 </head>
 <body>
   <iframe id="tableroFrame" src=""></iframe>
-
   <script src="script.js"></script>
 </body>
 </html>
