--- a/index.html
+++ b/index.html
@@ -1,31 +1,11 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Rotador de Tableros GSP</title>
-  <style>
-    body {
-      font-family: sans-serif;
-      background-color: #f0f0f0;
-      text-align: center;
-      padding: 30px;
-    }
-    h1 {
-      color: #0078d7;
-    }
-    #status {
-      margin-top: 20px;
-      font-size: 18px;
-      color: #333;
-    }
-  </style>
+  <meta charset="UTF-8">
+  <title>Rotador de Tableros</title>
 </head>
 <body>
-  <h1>Rotación de Tableros GSP</h1>
-  <p>Esta página abrirá tableros automáticamente cada 20 segundos.</p>
-  <p id="status">Iniciando rotación...</p>
-
+  <h1 style="text-align: center;">Rotando tableros de Power BI...</h1>
   <script src="script.js"></script>
 </body>
 </html>
