--- a/index.html
+++ b/index.html
@@ -1,11 +1,58 @@
+
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <title>Rotador de Tableros</title>
+    <meta charset="UTF-8">
+    <title>Tableros GSP</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f0f4f8;
+            margin: 0;
+            padding: 20px;
+        }
+        #controls {
+            position: fixed;
+            bottom: 20px;
+            left: 50%;
+            transform: translateX(-50%);
+            display: flex;
+            gap: 10px;
+            z-index: 1000;
+        }
+        .boton {
+            padding: 10px 20px;
+            font-size: 16px;
+            border: none;
+            color: white;
+            background-color: #0078d7;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background 0.3s;
+        }
+        .boton:hover {
+            background-color: #005a9e;
+        }
+        #timer {
+            position: fixed;
+            top: 20px;
+            right: 20px;
+            background-color: #e0f7ff;
+            color: #333;
+            padding: 10px 15px;
+            border-radius: 8px;
+            font-size: 18px;
+            font-weight: bold;
+            z-index: 1000;
+        }
+    </style>
 </head>
 <body>
-  <h1 style="text-align: center;">Rotando tableros de Power BI...</h1>
-  <script src="script.js"></script>
+    <div id="timer">00:20</div>
+    <div id="controls">
+        <button id="btnReanudar" class="boton">Reanudar</button>
+        <button id="btnDetener" class="boton">Detener</button>
+    </div>
+    <script src="script.js"></script>
 </body>
 </html>
