--- a/index.html
+++ b/index.html
@@ -1,58 +1,17 @@
-
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <title>Tableros GSP</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f0f4f8;
-            margin: 0;
-            padding: 20px;
-        }
-        #controls {
-            position: fixed;
-            bottom: 20px;
-            left: 50%;
-            transform: translateX(-50%);
-            display: flex;
-            gap: 10px;
-            z-index: 1000;
-        }
-        .boton {
-            padding: 10px 20px;
-            font-size: 16px;
-            border: none;
-            color: white;
-            background-color: #0078d7;
-            border-radius: 5px;
-            cursor: pointer;
-            transition: background 0.3s;
-        }
-        .boton:hover {
-            background-color: #005a9e;
-        }
-        #timer {
-            position: fixed;
-            top: 20px;
-            right: 20px;
-            background-color: #e0f7ff;
-            color: #333;
-            padding: 10px 15px;
-            border-radius: 8px;
-            font-size: 18px;
-            font-weight: bold;
-            z-index: 1000;
-        }
-    </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Tableros GSP</title>
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-    <div id="timer">00:20</div>
-    <div id="controls">
-        <button id="btnReanudar" class="boton">Reanudar</button>
-        <button id="btnDetener" class="boton">Detener</button>
-    </div>
-    <script src="script.js"></script>
+  <div id="timer">00:00</div>
+  <div id="controls">
+    <button id="startBtn">Reanudar</button>
+    <button id="stopBtn">Detener</button>
+  </div>
+  <script src="script.js"></script>
 </body>
 </html>
