--- a/index.html
+++ b/index.html
@@ -1,21 +1,54 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Tableros GSP</title>
-  <link rel="stylesheet" href="styles.css" />
+  <meta charset="UTF-8">
+  <title>Rotación de Tableros GSP</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      background-color: #f8f9fa;
+    }
+
+    #timer {
+      position: fixed;
+      top: 10px;
+      right: 10px;
+      background: #d1ecf1;
+      padding: 8px 12px;
+      border-radius: 8px;
+      font-weight: bold;
+    }
+
+    #controls {
+      position: fixed;
+      bottom: 20px;
+      left: 50%;
+      transform: translateX(-50%);
+    }
+
+    #controls button {
+      padding: 10px 20px;
+      margin: 0 5px;
+      font-size: 16px;
+      border: none;
+      border-radius: 6px;
+      background-color: #007bff;
+      color: white;
+      cursor: pointer;
+    }
+
+    #controls button:hover {
+      background-color: #0056b3;
+    }
+  </style>
 </head>
 <body>
-  <div id="top-bar">
-    <div id="timer">00:20</div>
-    <div id="controls">
-      <button id="startBtn">Reanudar</button>
-      <button id="stopBtn">Detener</button>
-    </div>
+  <div id="timer">00:00</div>
+  <div id="controls">
+    <button onclick="resume()">Reanudar</button>
+    <button onclick="pause()">Detener</button>
   </div>
-
-  <iframe id="tableroFrame" src="" frameborder="0" allowfullscreen></iframe>
 
   <script src="script.js"></script>
 </body>
