--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <div id="controls">
     <button onclick="startRotation()">▶ Reanudar</button>
     <button onclick="pauseRotation()">⏸ Detener</button>
-    <div id="timer">:10:00</div>
+    <div id="timer">10:00</div>
 </div>
 
 <script src="script.js"></script>
